bindings/c/include/xtreme3d.h

/* actor.pas */
__declspec(dllimport) double ActorCreate(char*, double, double);
__declspec(dllimport) double ActorCopy(double, double);
__declspec(dllimport) double ActorSetAnimationRange(double, double, double);
__declspec(dllimport) double ActorGetCurrentFrame(double);
__declspec(dllimport) double ActorSwitchToAnimation(double, double, double);
__declspec(dllimport) double ActorSwitchToAnimationName(double, char*, double);
__declspec(dllimport) double ActorSynchronize(double, double);
__declspec(dllimport) double ActorSetInterval(double, double);
__declspec(dllimport) double ActorSetAnimationMode(double, double);
__declspec(dllimport) double ActorSetFrameInterpolation(double, double);
__declspec(dllimport) double ActorAddObject(double, char*);
__declspec(dllimport) char* ActorGetCurrentAnimation(double);
__declspec(dllimport) double ActorGetFrameCount(double);
__declspec(dllimport) double ActorGetBoneCount(double);
__declspec(dllimport) double ActorGetBoneByName(double, char*);
__declspec(dllimport) double ActorGetBoneRotation(double, double, double);
__declspec(dllimport) double ActorGetBonePosition(double, double, double);
__declspec(dllimport) double ActorBoneExportMatrix(double, double, double);
__declspec(dllimport) double ActorMakeSkeletalTranslationStatic(double, double);
__declspec(dllimport) double ActorMakeSkeletalRotationDelta(double, double);
__declspec(dllimport) double ActorShowSkeleton(double, double);
__declspec(dllimport) double AnimationBlenderCreate(void);
__declspec(dllimport) double AnimationBlenderSetActor(double, double);
__declspec(dllimport) double AnimationBlenderSetAnimation(double, char*);
__declspec(dllimport) double AnimationBlenderSetRatio(double, double);
__declspec(dllimport) double ActorLoadQ3TagList(char*);
__declspec(dllimport) double ActorQ3TagExportMatrix(double, double, char*, double);
__declspec(dllimport) double ActorLoadQ3Animations(double, char*, char*);
__declspec(dllimport) double ActorMeshObjectsCount(double);
__declspec(dllimport) double ActorFaceGroupsCount(double, double);
__declspec(dllimport) char* ActorFaceGroupGetMaterialName(double, double, double);
__declspec(dllimport) double ActorFaceGroupSetMaterial(double, double, double, char*);
__declspec(dllimport) double ActorMoveBone(double, double, double, double, double);
__declspec(dllimport) double ActorRotateBone(double, double, double, double, double);
__declspec(dllimport) double ActorMeshSetVisible(double, double, double);
__declspec(dllimport) char* ActorGetAnimationName(double, double);
__declspec(dllimport) double ActorGetAnimationCount(double);
__declspec(dllimport) double ActorAnimationDestroy(double, double);
__declspec(dllimport) double ActorAnimationNextFrame(double);
__declspec(dllimport) double ActorAnimationPrevFrame(double);
__declspec(dllimport) double ActorSetFrame(double, double);
__declspec(dllimport) double ActorTriangleCount(double);
__declspec(dllimport) double ActorSetReference(double, double);
/* blur.pas */
__declspec(dllimport) double BlurCreate(double, double);
__declspec(dllimport) double BlurSetPreset(double, double);
__declspec(dllimport) double BlurSetOptions(double, double, double, double, double, double);
__declspec(dllimport) double BlurSetResolution(double, double);
__declspec(dllimport) double BlurSetColor(double, double);
__declspec(dllimport) double BlurSetBlendingMode(double, double);
/* camera.pas */
__declspec(dllimport) double CameraCreate(double);
__declspec(dllimport) double CameraSetStyle(double, double);
__declspec(dllimport) double CameraSetFocal(double, double);
__declspec(dllimport) double CameraSetSceneScale(double, double);
__declspec(dllimport) double CameraScaleScene(double, double);