bindings/python3/xtreme3d/x3dfuncs.py

import ctypes

x3d = ctypes.CDLL('./xtreme3d.dll')

# actor.pas
x3d.ActorCreate.argtypes = [ctypes.c_char_p, ctypes.c_double, ctypes.c_double]
x3d.ActorCreate.restype = ctypes.c_double
def ActorCreate(aFname, aMatl, aParent):
    return x3d.ActorCreate(aFname, aMatl, aParent)

x3d.ActorCopy.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.ActorCopy.restype = ctypes.c_double
def ActorCopy(aActor, aParent):
    return x3d.ActorCopy(aActor, aParent)

x3d.ActorSetAnimationRange.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.ActorSetAnimationRange.restype = ctypes.c_double
def ActorSetAnimationRange(aActor, aFramestart, aFrameend):
    return x3d.ActorSetAnimationRange(aActor, aFramestart, aFrameend)

x3d.ActorGetCurrentFrame.argtypes = [ctypes.c_double]
x3d.ActorGetCurrentFrame.restype = ctypes.c_double
def ActorGetCurrentFrame(aActor):
    return x3d.ActorGetCurrentFrame(aActor)

x3d.ActorSwitchToAnimation.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.ActorSwitchToAnimation.restype = ctypes.c_double
def ActorSwitchToAnimation(aActor, aAnim, aSmooth):
    return x3d.ActorSwitchToAnimation(aActor, aAnim, aSmooth)

x3d.ActorSwitchToAnimationName.argtypes = [ctypes.c_double, ctypes.c_char_p, ctypes.c_double]
x3d.ActorSwitchToAnimationName.restype = ctypes.c_double
def ActorSwitchToAnimationName(aActor, aAnim, aSmooth):
    return x3d.ActorSwitchToAnimationName(aActor, aAnim, aSmooth)

x3d.ActorSynchronize.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.ActorSynchronize.restype = ctypes.c_double
def ActorSynchronize(aActor1, aActor2):
    return x3d.ActorSynchronize(aActor1, aActor2)

x3d.ActorSetInterval.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.ActorSetInterval.restype = ctypes.c_double
def ActorSetInterval(aActor, aInterv):
    return x3d.ActorSetInterval(aActor, aInterv)

x3d.ActorSetAnimationMode.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.ActorSetAnimationMode.restype = ctypes.c_double
def ActorSetAnimationMode(aActor, aAam):
    return x3d.ActorSetAnimationMode(aActor, aAam)

x3d.ActorSetFrameInterpolation.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.ActorSetFrameInterpolation.restype = ctypes.c_double
def ActorSetFrameInterpolation(aActor, aAfp):
    return x3d.ActorSetFrameInterpolation(aActor, aAfp)

x3d.ActorAddObject.argtypes = [ctypes.c_double, ctypes.c_char_p]
x3d.ActorAddObject.restype = ctypes.c_double
def ActorAddObject(aActor, aFname):
    return x3d.ActorAddObject(aActor, aFname)

x3d.ActorGetCurrentAnimation.argtypes = [ctypes.c_double]
x3d.ActorGetCurrentAnimation.restype = ctypes.c_char_p
def ActorGetCurrentAnimation(aActor):
    return x3d.ActorGetCurrentAnimation(aActor)

x3d.ActorGetFrameCount.argtypes = [ctypes.c_double]
x3d.ActorGetFrameCount.restype = ctypes.c_double
def ActorGetFrameCount(aActor):
    return x3d.ActorGetFrameCount(aActor)

x3d.ActorGetBoneCount.argtypes = [ctypes.c_double]
x3d.ActorGetBoneCount.restype = ctypes.c_double
def ActorGetBoneCount(aActor):
    return x3d.ActorGetBoneCount(aActor)

x3d.ActorGetBoneByName.argtypes = [ctypes.c_double, ctypes.c_char_p]
x3d.ActorGetBoneByName.restype = ctypes.c_double
def ActorGetBoneByName(aActor, aName):
    return x3d.ActorGetBoneByName(aActor, aName)

x3d.ActorGetBoneRotation.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.ActorGetBoneRotation.restype = ctypes.c_double
def ActorGetBoneRotation(aActor, aBone, aInd):
    return x3d.ActorGetBoneRotation(aActor, aBone, aInd)

x3d.ActorGetBonePosition.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.ActorGetBonePosition.restype = ctypes.c_double
def ActorGetBonePosition(aActor, aBone, aInd):
    return x3d.ActorGetBonePosition(aActor, aBone, aInd)

x3d.ActorBoneExportMatrix.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.ActorBoneExportMatrix.restype = ctypes.c_double
def ActorBoneExportMatrix(aActor, aBone, aObj):
    return x3d.ActorBoneExportMatrix(aActor, aBone, aObj)

x3d.ActorMakeSkeletalTranslationStatic.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.ActorMakeSkeletalTranslationStatic.restype = ctypes.c_double
def ActorMakeSkeletalTranslationStatic(aActor, aAnim):
    return x3d.ActorMakeSkeletalTranslationStatic(aActor, aAnim)

x3d.ActorMakeSkeletalRotationDelta.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.ActorMakeSkeletalRotationDelta.restype = ctypes.c_double
def ActorMakeSkeletalRotationDelta(aActor, aAnim):
    return x3d.ActorMakeSkeletalRotationDelta(aActor, aAnim)

x3d.ActorShowSkeleton.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.ActorShowSkeleton.restype = ctypes.c_double
def ActorShowSkeleton(aActor, aMode):
    return x3d.ActorShowSkeleton(aActor, aMode)

x3d.AnimationBlenderCreate.argtypes = []
x3d.AnimationBlenderCreate.restype = ctypes.c_double
def AnimationBlenderCreate():
    return x3d.AnimationBlenderCreate()

x3d.AnimationBlenderSetActor.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.AnimationBlenderSetActor.restype = ctypes.c_double
def AnimationBlenderSetActor(aAnim, aActor):
    return x3d.AnimationBlenderSetActor(aAnim, aActor)

x3d.AnimationBlenderSetAnimation.argtypes = [ctypes.c_double, ctypes.c_char_p]
x3d.AnimationBlenderSetAnimation.restype = ctypes.c_double
def AnimationBlenderSetAnimation(aAnim, aName):
    return x3d.AnimationBlenderSetAnimation(aAnim, aName)

x3d.AnimationBlenderSetRatio.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.AnimationBlenderSetRatio.restype = ctypes.c_double
def AnimationBlenderSetRatio(aAnim, aRat):
    return x3d.AnimationBlenderSetRatio(aAnim, aRat)

x3d.ActorLoadQ3TagList.argtypes = [ctypes.c_char_p]
x3d.ActorLoadQ3TagList.restype = ctypes.c_double
def ActorLoadQ3TagList(aFname):
    return x3d.ActorLoadQ3TagList(aFname)

x3d.ActorQ3TagExportMatrix.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_char_p, ctypes.c_double]
x3d.ActorQ3TagExportMatrix.restype = ctypes.c_double
def ActorQ3TagExportMatrix(aActor, aTaglist, aTagname, aObj):
    return x3d.ActorQ3TagExportMatrix(aActor, aTaglist, aTagname, aObj)

x3d.ActorLoadQ3Animations.argtypes = [ctypes.c_double, ctypes.c_char_p, ctypes.c_char_p]
x3d.ActorLoadQ3Animations.restype = ctypes.c_double
def ActorLoadQ3Animations(aActor, aFname, aClas):
    return x3d.ActorLoadQ3Animations(aActor, aFname, aClas)

x3d.ActorMeshObjectsCount.argtypes = [ctypes.c_double]
x3d.ActorMeshObjectsCount.restype = ctypes.c_double
def ActorMeshObjectsCount(aActor):
    return x3d.ActorMeshObjectsCount(aActor)

x3d.ActorFaceGroupsCount.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.ActorFaceGroupsCount.restype = ctypes.c_double
def ActorFaceGroupsCount(aActor, aMeshobject):
    return x3d.ActorFaceGroupsCount(aActor, aMeshobject)

x3d.ActorFaceGroupGetMaterialName.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.ActorFaceGroupGetMaterialName.restype = ctypes.c_char_p
def ActorFaceGroupGetMaterialName(aActor, aMeshobject, aFacegroup):
    return x3d.ActorFaceGroupGetMaterialName(aActor, aMeshobject, aFacegroup)

x3d.ActorFaceGroupSetMaterial.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_char_p]
x3d.ActorFaceGroupSetMaterial.restype = ctypes.c_double
def ActorFaceGroupSetMaterial(aActor, aMeshobject, aFacegroup, aMtrl):
    return x3d.ActorFaceGroupSetMaterial(aActor, aMeshobject, aFacegroup, aMtrl)

x3d.ActorMoveBone.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.ActorMoveBone.restype = ctypes.c_double
def ActorMoveBone(aActor, aBoneindex, aX, aY, aZ):
    return x3d.ActorMoveBone(aActor, aBoneindex, aX, aY, aZ)

x3d.ActorRotateBone.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.ActorRotateBone.restype = ctypes.c_double
def ActorRotateBone(aActor, aBoneindex, aX, aY, aZ):
    return x3d.ActorRotateBone(aActor, aBoneindex, aX, aY, aZ)

x3d.ActorMeshSetVisible.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.ActorMeshSetVisible.restype = ctypes.c_double
def ActorMeshSetVisible(aActor, aMesh, aMode):
    return x3d.ActorMeshSetVisible(aActor, aMesh, aMode)

x3d.ActorGetAnimationName.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.ActorGetAnimationName.restype = ctypes.c_char_p
def ActorGetAnimationName(aActor, aInd):
    return x3d.ActorGetAnimationName(aActor, aInd)

x3d.ActorGetAnimationCount.argtypes = [ctypes.c_double]
x3d.ActorGetAnimationCount.restype = ctypes.c_double
def ActorGetAnimationCount(aActor):
    return x3d.ActorGetAnimationCount(aActor)

x3d.ActorAnimationDestroy.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.ActorAnimationDestroy.restype = ctypes.c_double
def ActorAnimationDestroy(aActor, aIndex):
    return x3d.ActorAnimationDestroy(aActor, aIndex)

x3d.ActorAnimationNextFrame.argtypes = [ctypes.c_double]
x3d.ActorAnimationNextFrame.restype = ctypes.c_double
def ActorAnimationNextFrame(aActor):
    return x3d.ActorAnimationNextFrame(aActor)

x3d.ActorAnimationPrevFrame.argtypes = [ctypes.c_double]
x3d.ActorAnimationPrevFrame.restype = ctypes.c_double
def ActorAnimationPrevFrame(aActor):
    return x3d.ActorAnimationPrevFrame(aActor)

x3d.ActorSetFrame.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.ActorSetFrame.restype = ctypes.c_double
def ActorSetFrame(aActor, aFrame):
    return x3d.ActorSetFrame(aActor, aFrame)

x3d.ActorTriangleCount.argtypes = [ctypes.c_double]
x3d.ActorTriangleCount.restype = ctypes.c_double
def ActorTriangleCount(aActor):
    return x3d.ActorTriangleCount(aActor)

x3d.ActorSetReference.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.ActorSetReference.restype = ctypes.c_double
def ActorSetReference(aActor, aAar):
    return x3d.ActorSetReference(aActor, aAar)


# blur.pas
x3d.BlurCreate.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.BlurCreate.restype = ctypes.c_double
def BlurCreate(aTargetobj, aParent):
    return x3d.BlurCreate(aTargetobj, aParent)

x3d.BlurSetPreset.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.BlurSetPreset.restype = ctypes.c_double
def BlurSetPreset(aBlur, aP):
    return x3d.BlurSetPreset(aBlur, aP)

x3d.BlurSetOptions.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.BlurSetOptions.restype = ctypes.c_double
def BlurSetOptions(aBlur, aDelta, aLeft, aTop, aRight, aBottom):
    return x3d.BlurSetOptions(aBlur, aDelta, aLeft, aTop, aRight, aBottom)

x3d.BlurSetResolution.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.BlurSetResolution.restype = ctypes.c_double
def BlurSetResolution(aBlur, aRes):
    return x3d.BlurSetResolution(aBlur, aRes)

x3d.BlurSetColor.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.BlurSetColor.restype = ctypes.c_double
def BlurSetColor(aBlur, aCol):
    return x3d.BlurSetColor(aBlur, aCol)

x3d.BlurSetBlendingMode.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.BlurSetBlendingMode.restype = ctypes.c_double
def BlurSetBlendingMode(aBlur, aBm):
    return x3d.BlurSetBlendingMode(aBlur, aBm)


# camera.pas
x3d.CameraCreate.argtypes = [ctypes.c_double]
x3d.CameraCreate.restype = ctypes.c_double
def CameraCreate(aParent):
    return x3d.CameraCreate(aParent)

x3d.CameraSetStyle.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.CameraSetStyle.restype = ctypes.c_double
def CameraSetStyle(aCamera, aCs):
    return x3d.CameraSetStyle(aCamera, aCs)

x3d.CameraSetFocal.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.CameraSetFocal.restype = ctypes.c_double
def CameraSetFocal(aCamera, aFov):
    return x3d.CameraSetFocal(aCamera, aFov)

x3d.CameraSetSceneScale.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.CameraSetSceneScale.restype = ctypes.c_double
def CameraSetSceneScale(aCamera, aScale):
    return x3d.CameraSetSceneScale(aCamera, aScale)

x3d.CameraScaleScene.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.CameraScaleScene.restype = ctypes.c_double
def CameraScaleScene(aCamera, aScale):
    return x3d.CameraScaleScene(aCamera, aScale)
